--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <br>
     <form class="" action="index.html" method="post">
       <label for="name">Nama:</label>
-      <input type="text" name="" value= "Masukan Nama" </form>
+      <input type="text" name="" value= "" </form>
       <br>
       <label for="nik">Alamat:</label>
-      <input type="text" name="" value="Masukan Alamat">
+      <input type="text" name="" value="">
       <br>
       <br>
       <label for="memiliki kendaraan">Memiliki kendaraan:</label>
@@ -47,12 +47,12 @@
     <label for="tahun kendaraan">Tahun kendaraan:</label>
     <br>
     <ul>
-        <input type="text" name="" value="Masukan Tahun Kendaraan">
+        <input type="text" name="" value="">
     </ul>
     <label for="alasan">Alasan Membeli Kendaraan:</label>
     <br>
     <ul>
-      <input type="text" name="" value="Silahkan Isi Alasannya">
+      <input type="text" name="" value="">
     </ul>
     <ul>
       <input type="submit" name="" value="submit">
